--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,14 @@ version '1.0-SNAPSHOT'
 buildscript {
     repositories {
         mavenCentral()
+
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.1"
     }
 }
 
@@ -14,11 +19,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
-
-jar {
-    baseName = 'RahanSazeh-ApiServer'
-    version =  '0.1.0'
-}
+apply plugin: "com.github.johnrengelman.shadow"
 
 sourceCompatibility = 1.8
 
@@ -31,5 +32,18 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-data-mongodb")
     testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+jar {
+    baseName = 'RahanSazeh-ApiServer'
+    version =  '0.1.0'
+
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': 'com.rahansazeh.apiserver.Application'
+        )
+    }
 }
