uncommented old code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost/rahansazeh
+spring.data.mongodb.uri=mongodb://arcana261_rahansazeh:<dbpassword>@ds159676.mlab.com:59676/rahansazeh
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
