--- a/build.gradle
+++ b/build.gradle
@@ -35,13 +35,13 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-logging")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-    compile("org.springframework.boot:spring-boot-starter-security")
 
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.0.1'
 
-    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
-    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-io
+    // for logging http request/responses support
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
