--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.data.mongodb.uri=mongodb://arcana261_rahansazeh:${DB_PASSWORD}@ds159676.mlab.com:59676/rahansazeh
-server.port = 3000
+server.port = ${PORT} 
