--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
-        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.1"
+        //classpath "com.github.jengelman.gradle.plugins:shadow:2.0.1"
     }
 }
 
@@ -19,7 +19,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
-apply plugin: "com.github.johnrengelman.shadow"
+//apply plugin: "com.github.johnrengelman.shadow"
 
 sourceCompatibility = 1.8
 
@@ -46,12 +46,18 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
+//shadowJar {
+    //mergeServiceFiles()
+//}
+
 jar {
     baseName = 'RahanSazeh-ApiServer'
     version =  '0.1.0'
 
     manifest {
         attributes(
+                'Implementation-Title': 'RahanSazeh-ApiServer',
+                'Implementation-Version': version,
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                 'Main-Class': 'com.rahansazeh.apiserver.Application'
         )
